# jobmarket-watch

./: .gitignore  README.md  deduplicate.py  manage.py  pyproject.toml  scrap.ipynb
.cursor/plans/: django_dashboard_setup_6584781a.plan.md  fastapi_dashboard_recreation_83024d15.plan.md
.github/workflows/: daily-scrape-r.yml  daily-scrape.yml
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/management/commands/: import_csv.py
dashboard/migrations/: 0001_initial.py
dashboard/templates/dashboard/: base.html  city_detail.html  index.html
data/: data.csv  nb_export.R  nb_export.py  scrap.ipynb  scrap.py
fastapi/: README.md  charts.py  database.py  import_csv.py  main.py  routes.py  schemas.py
fastapi/templates/: base.html  city_detail.html  index.html
jobmarket_watch/: asgi.py  settings.py  urls.py  wsgi.py
