[project]
name = "jobmarket-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "plotnine>=0.15.2",
    "requests>=2.32.5",
]
