[project]
name = "jobmarket-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "kaleido>=1.2.0",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "plotnine>=0.15.2",
    "requests>=2.32.5",
]
